# jaundice-rate

./: README.md  docker-compose-dev.yml  docker-compose-prod.yml  docker-compose.override.yml  docker-compose.yml  main.py  pyproject.toml  server.py  settings.py  statuses.py  text_tools.py  utils.py
adapters/: html_tools.py  inosmi_ru.py
docker/: Dockerfile  gunicorn.sh
docker/aio_app/: Dockerfile
docker/nginx/: nginx.conf
tests/: conftest.py  test_inosmi_adapter.py  test_load_settings.py  test_process_article.py  test_server.py  test_text_tools.py
tests/html_examples/: inosmi_bad_example.html  inosmi_good_example.html
