[tool.poetry]
name = "dvmn-async-lesson6"
version = "0.1.0"
description = "News filter"
authors = ["Dmitry Plevkov <wwarne@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
aiohttp = "^3.6.2"
aiodns = "^2.0.0"
beautifulsoup4 = "^4.9.1"
requests = "^2.24.0"
pymorphy2 = "^0.8"
cchardet = "^2.1.6"
anyio = "^1.4.0"
async-timeout = "^3.0.1"
ConfigArgParse = "^1.2.3"
gunicorn = "^20.0.4"
aioredis = "^1.3.1"
aiocache = "^0.11.1"

[tool.poetry.dev-dependencies]
pytest = "^5.4.3"
pytest-asyncio = "^0.14.0"
pytest-mock = "^3.2.0"
pytest-aiohttp = "^0.3.0"
mutmut = "^2.0.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
